# incident-commander

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  NOTICE  README.md  SECURITY.md  docker-compose.yml  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml  release.yml
app/: auth.py  config.py  crypto.py  db.py  main.py  models.py  settings_store.py  templating.py
app/routers/: account.py  alerts.py  auth.py  automation.py  catalog.py  connections.py  followups.py  google_auth.py  groups.py  incidents.py  ingest.py  insights.py  invites.py  maps.py  oidc_auth.py  postmortems.py  settings.py  users.py
app/security/: csrf.py  passwords.py
app/services/: alert_adapters.py  alerts.py  automation.py  catalog.py  custom_fields.py  email.py  followups.py  google.py  incident_actions.py  incident_types.py  incidents.py  insights.py  invites.py  markdown.py  oidc.py  postmortems.py  providers.py  roles.py  service_map.py  slack.py  statuses.py  teams.py  timeline.py  updates.py  users.py  webhooks.py
app/static/: app.css
app/templates/: account_password.html  alerts.html  automations.html  base.html  components.html  connections.html  (+14 more)
docker/: entrypoint.sh
migrations/: env.py
tests/: conftest.py  test_account_password.py  test_alert_adapters.py  test_alerts_routes.py  test_alerts_service.py  test_auth_routes.py  test_automation_alert_trigger.py  test_automation_engine.py  test_automation_incident_triggers.py  test_automation_routes.py  test_automation_ui.py  test_bootstrap_startup.py  test_catalog_components.py  test_catalog_routes.py  test_catalog_systems.py  test_config.py  test_connections_google_removed.py  test_connections_routes.py  test_crypto.py  test_csrf.py  test_custom_fields.py  test_custom_fields_routes.py  test_db.py  test_email_service.py  test_entrypoint.py  test_flash_rendering.py  test_followups.py  test_followups_page.py  test_followups_routes.py  test_gemini_auto_artifacts.py  test_gemini_notes_google.py  test_gemini_notes_hooks.py  test_gemini_notes_postmortem.py  test_google_connection.py  test_google_meet_space.py  test_google_notes_drive.py  test_google_service.py  test_google_sso.py  test_health.py  test_incident_add_integrations.py  (+66 more)
(+36 files in other folders)
