[project]
name = "incident-commander"
version = "0.1.0"
description = "Open-source self-hosted incident management."
readme = "README.md"
authors = [
    { name = "Gianmarco Carrieri", email = "gianmarco.carrieri@gmail.com" }
]
license = "Apache-2.0"
license-files = ["LICENSE", "NOTICE"]
keywords = ["incident-management", "incident-response", "sre", "devops", "on-call", "self-hosted", "fastapi", "htmx"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Web Environment",
    "Framework :: FastAPI",
    "Intended Audience :: System Administrators",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.12",
    "Topic :: System :: Monitoring",
]
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.18.4",
    "argon2-cffi>=25.1.0",
    "authlib>=1.7.2",
    "cryptography>=49.0.0",
    "fastapi>=0.138.0",
    "google-api-python-client>=2.197.0",
    "google-auth>=2.55.0",
    "httpx>=0.28.1",
    "itsdangerous>=2.2.0",
    "jinja2>=3.1.6",
    "markdown>=3.10.2",
    "nh3>=0.3.5",
    "psycopg[binary]>=3.3.4",
    "pydantic-settings>=2.14.2",
    "python-multipart>=0.0.32",
    "slack-sdk>=3.42.0",
    "sqlalchemy>=2.0.51",
    "uvicorn[standard]>=0.49.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]


[dependency-groups]
dev = [
    "pytest>=9.1.1",
    "pytest-mock>=3.15.1",
    "ruff>=0.15.18",
    "testcontainers[postgres]>=4.14.2",
]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
filterwarnings = [
    "ignore::starlette.exceptions.StarletteDeprecationWarning",
]

[project.urls]
Homepage = "https://github.com/giammbo/incident-commander"
Repository = "https://github.com/giammbo/incident-commander"
Issues = "https://github.com/giammbo/incident-commander/issues"

[tool.ruff]
line-length = 100
target-version = "py312"
extend-exclude = ["migrations"]

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP"]
# E501: line length is handled by the formatter; UP042: StrEnum migration changes
# str(enum) behavior and touches the ORM enum columns — revisit deliberately, not as a lint autofix.
ignore = ["E501", "UP042"]
